permite editar pasta de projetos por coordenação

--- a/templates/projeto.html
+++ b/templates/projeto.html
@@ -22,115 +22,9 @@
   {% endif %}
 </span>
 
-<div>
+{% include "projetos/includes/bloco_titulo_resumo_pchave.html" with projeto=alocado.projeto estudante_view=True %}
 
-  <form {% if alocado.projeto %}action="{% url 'upload_estudantes_projeto' alocado.projeto.id %}"{% endif %} method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <label for="titulo_final"><b>
-      {% lng "Título Final do Projeto" "Final Title of the Project" %}
-    </b></label><br>
-    <textarea id="titulo_final" name="titulo_final" rows="1" maxlength="{% max_length Projeto 'titulo_final' %}"
-    placeholder="Indique o título final do projeto usado no relatório (se diferente do título original da proposta)"
-    >{% if alocado.projeto.titulo_final %}{{alocado.projeto.titulo_final}}{% endif %}</textarea>
-    <br><br>
-
-    <label for="resumo"><b>
-      {% lng "Resumo (português)" "Resumo (portuguese)" %}
-    </b></label><br>
-    <textarea id="resumo" name="resumo" rows="6" maxlength="{% max_length Projeto 'resumo' %}"
-    placeholder="Informe o resumo em português do projeto do relatório. Copie diretamente do seu relatório."
-    >{% if alocado.projeto.resumo %}{{alocado.projeto.resumo}}{% endif %}</textarea>
-    <br><br>
-
-    <label for="abstract"><b>
-      {% lng "Abstract (inglês)" "Abstract (english)" %}
-    </b></label><br>
-    <textarea id="abstract" name="abstract" rows="6" maxlength="{% max_length Projeto 'abstract' %}"
-    placeholder="Informe o resumo em inglês do projeto do relatório. Copie diretamente do seu relatório."
-    >{% if alocado.projeto.abstract %}{{alocado.projeto.abstract}}{% endif %}</textarea>
-    <br><br>
-
-    <label for="palavras_chave"><b>
-      {% lng "Palavras-chave" "Keywords" %}
-    </b></label><br>
-    <textarea id="palavras_chave" name="palavras_chave" rows="1" maxlength="{% max_length Projeto 'palavras_chave' %}"
-    placeholder="Informe as palavras-chave do projeto do relatório. Copie diretamente do seu relatório."
-    >{% if alocado.projeto.palavras_chave %}{{alocado.projeto.palavras_chave}}{% endif %}</textarea>
-    <br>
-    <small>
-      {% lng "Ao final do semestre, inserir/atualizar o resumo, abstract e palavras-chave para indexação do relatório. Copie diretamente do seu relatório." "At the end of the semester, insert/update the summary, abstract and keywords for indexing the report. Copy directly from your report." %}
-    </small>
-    <div class="text-right">
-      <input class="btn btn-primary btn-sm" type="submit" name="Salvar" value="Salvar" {% if professor or not alocado.projeto %}disabled{% endif %}>
-    </div>
-  </form>
-</div>
-
-
-<div>
-  <form {% if alocado.projeto %}action="{% url 'upload_site_e_pastas' alocado.projeto.id %}"{% endif %} method="post" enctype="multipart/form-data">
-  {% csrf_token %}
-
-    <label for="site"><b>
-      {% lng "Site do projeto (opcional)" "Project site (optional)" %}
-    </b></label>
-    {% with site=alocado.projeto.get_site %}
-    <div class="row">
-      <div class="col-md-6">
-        {% if site %}
-          <i>{% lng "site estático:" "static site:" %}</i>
-          <a style="background-color: #FFFFFF; padding: 4px;"
-             href="{{site}}" target="_blank">{{request.scheme}}://{{request.get_host}}{{site}}</a>
-          <br>
-        {% else %}
-          <input type="text" size="73" maxlength="{% max_length Projeto "site" %}" 
-                 style="max-width: 95%;" id="site" name="site" {% if alocado.projeto.site %}
-                 value="{{alocado.projeto.site}}" {% endif %} placeholder="https://www.insper.edu.br/"><br>
-          <div style="font-size: 12px; line-height:1.0;">site do projeto em repositório externo</div>
-          <br>
-        {% endif %}
-      </div>
-      <div class="col-md-6">
-        <input type="file" id="zipsite" name="zipsite" accept=".zip" {% if professor or not alocado.projeto %}disabled{% endif %}>
-        <input class="btn btn-info btn-sm" type="submit" id="Carregar" name="Carregar" value="Carregar" disabled>
-        {% if alocado.projeto %}
-          <script>
-            document.getElementById("zipsite").addEventListener("change", function() {
-              if (this.value) {
-                  document.getElementById("Carregar").disabled = false;
-              } else {
-                  document.getElementById("Carregar").disabled = true;
-              }
-            });
-          </script>
-        {% endif %}
-        {% if site %}
-          <input class="btn btn-danger btn-sm" type="submit" name="Remover" value="Remover" {% if professor or not alocado.projeto %}disabled{% endif %}>
-        {% endif %}
-        <br>
-        <div style="font-size: 12px; line-height:1.0;">
-          {% lng "carrega um arquivo .zip com um site estático para o projeto" "uploads a .zip file with a static site for the project" %}
-        </div>
-        <br>
-      </div>
-    </div>
-    {% endwith %}
-
-    <label for="pastas_do_projeto"><b>
-      {% lng "Pastas do projeto (opcional)" "Project folders (optional)" %}
-    </b></label><br>
-    <textarea id="pastas_do_projeto" name="pastas_do_projeto" rows="6" maxlength="{% max_length Projeto 'pastas_do_projeto' %}"
-    >{% if alocado.projeto.pastas_do_projeto %}{{alocado.projeto.pastas_do_projeto}}{% endif %}</textarea>
-    <div style="font-size: 12px; line-height:1.0;">
-      {% lng "Links para repositórios com dados/códigos dos projeto (para orientador acessar / mantenha privado se não tiver autorização da organização parceira para deixar público)" "Links to repositories with project data/code (for advisor access / keep private if you do not have authorization from the partner organization to make it public)" %}
-    </div>
-
-    <div class="text-right">
-      <input class="btn btn-primary btn-sm" type="submit" name="Salvar" value="Salvar" {% if professor or not alocado.projeto %}disabled{% endif %}>
-    </div>
-  </form>
-</div>
-
+{% include "projetos/includes/bloco_site_pasta_proj.html" with projeto=alocado.projeto estudante_view=True %}
 
 <div>
   <b>{% lng "Descrição da proposta (escrito pela organização parceira):" "Proposal description (written by the partner organization):" %}</b>
