--- a/projetos/templates/projetos/editar_projeto.html
+++ b/projetos/templates/projetos/editar_projeto.html
@@ -26,43 +26,19 @@
 
 {% block content %}
 
+  <label for="titulo">
+    {% lng "Título original da proposta:" "Original title of the proposal:" %}
+  </label><br>
+  <input type="text" size="86" id="titulo_original" name="titulo_original" value="{{projeto.proposta.titulo}}" disabled>
+  <br><br>
+
+  {% include "projetos/includes/bloco_titulo_resumo_pchave.html" with projeto=projeto professor_view=True %}
+  <hr>
+
+  {% include "projetos/includes/bloco_site_pasta_proj.html" with projeto=projeto professor_view=True %}
+  <hr>
+
   <form method="post"> {% csrf_token %}  
-
-    <label for="titulo">
-      {% lng "Título original da proposta:" "Original title of the proposal:" %}
-    </label><br>
-    <input type="text" size="86" id="titulo_original" name="titulo_original" value="{{projeto.proposta.titulo}}" disabled>
-    <br><br>
-
-    <label for="titulo">
-      {% lng "Título do Projeto:" "Project Title:" %}
-    </label><br>
-    <input type="text" size="86" maxlength="{% max_length projeto 'titulo_final' %}" id="titulo" name="titulo"
-    placeholder="Na ausência de um título final, o título original da proposta será mantido."
-    value="{% if projeto.titulo_final %}{{projeto.titulo_final}}{% endif %}">
-    <br><br>
-
-    <label for="resumo">
-      {% lng "Resumo do Projeto (português)" "Project Summary (english)" %}
-    </label><br>
-    <textarea id="resumo" name="resumo" rows="10" cols="88" maxlength="{% max_length projeto 'resumo' %}"
-    >{% if projeto.resumo %}{{projeto.resumo}}{% endif %}</textarea>
-    <br><br>
-
-    <label for="abstract">
-      {% lng "Resumo do Projeto (inglês)" "Project Abstract (english)" %}
-      
-    </label><br>
-    <textarea id="abstract" name="abstract" rows="10" cols="88" maxlength="{% max_length projeto 'abstract' %}"
-    >{% if projeto.abstract %}{{projeto.abstract}}{% endif %}</textarea>
-    <br><br>
-
-    <label for="palavras_chave">
-      {% lng "Palavras-chave" "Keywords" %}
-    </label><br>
-    <textarea id="palavras_chave" name="palavras_chave" rows="1" cols="88" maxlength="{% max_length projeto 'palavras_chave' %}"
-    >{% if projeto.palavras_chave %}{{projeto.palavras_chave}}{% endif %}</textarea>
-    <br><br>
 
     <div style="max-width: 560px;">
       <div style="margin-bottom: 6px;">
@@ -187,7 +163,12 @@
 
     <br><br>
 
-    <input class="btn btn-primary mb-1" id="submit" type="submit" value="Atualizar Projeto">
+    <div class="text-right">
+      <button class="btn btn-primary btn-sm mb-1" id="submit" type="submit" name="submit">
+        {% lng "Atualizar Equipe Projeto" "Update Project Team" %}
+      </button>
+    </div>
+
     <span id="mensagem"></span>
     
   </form>
