--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -9,10 +9,6 @@
   {% load static %}
   {% load linguas %}
   <script src="{% static 'js/sort.js' %}"></script>
-  <style>
-    .certificacao_excelencia {background-color:lightgreen !important;}
-    .certificacao_destaque {background-color:lemonchiffon !important;}
-  </style>
 
   {% comment %} PARA O PAINEL DE FILTRO DE NOTAS DE BANCAS{% endcomment %}
   <style>
@@ -93,7 +89,7 @@
               <th style="border-right:0px; border-left:0px;"></th>
               <th style="border-right:0px; border-left:0px;"></th>
               <th colspan="2" class="text-center"><b>{% lng "Relatórios" "Reports" %}</b></th>
-              <th colspan="3" class="text-center">
+              <th colspan="2" class="text-center">
                 <b>
                   {% lng "Bancas" "Exam. Board" %}
                   <span style="cursor:pointer;" class="fas fa-filter esconder"
@@ -109,19 +105,12 @@
               <th onclick="sort('#ProjetosTable', '.item', 'td:nth-child(5)')" data-toggle="tooltip" data-html="true" animation="true" title="Relatório Final">Final</th>
               <th onclick="sort('#ProjetosTable', '.item', 'td:nth-child(6)')" data-toggle="tooltip" data-html="true" animation="true" title="Banca Intermediária">Inter.</th>
               <th onclick="sort('#ProjetosTable', '.item', 'td:nth-child(7)')" data-toggle="tooltip" data-html="true" animation="true" title="Banca Final">Final</th>
-              <th onclick="sort('#ProjetosTable', '.item', 'td:nth-child(8)')" data-toggle="tooltip" data-html="true" animation="true" title="Banca Falconi">Falc.</th>
             </tr>      
           </thead>
 
           <tbody>
-            {% for projeto, relatorio_intermediario, relatorio_final, banca_intermediaria, banca_final, banca_falconi in tabela %} 
-              <tr class="item
-                {% if banca_falconi.certificacao == "E" %}
-                  certificacao_excelencia
-                {% elif banca_falconi.certificacao == "D" %}
-                  certificacao_destaque
-                {% endif %}
-                ">
+            {% for projeto, relatorio_intermediario, relatorio_final, banca_intermediaria, banca_final in tabela %} 
+              <tr class="item">
                   <td>
                     [<a class="imprimir" href="{% url 'organizacao_completo' projeto.organizacao.id %}">{{ projeto.organizacao.nome }}</a>]
                     <a class="imprimir" href="{% url 'projeto_infos' projeto.id %}">
@@ -278,34 +267,10 @@
                     </a>
                   </td>
 
-                  {% comment %} Banca Falconi {% endcomment %}
-                  <td class="text-center" style="white-space: nowrap;">
-                    <a class="imprimir" href="{% url 'resultado_bancas' %}?projeto={{projeto.id}}"
-                      {% if banca_falconi.nota_incompleta == 1 %} {% comment %} no inicio {% endcomment %}
-                        style="background-color: darkgrey; font-weight: bold;"
-                      {% elif banca_falconi.nota_incompleta == 2 %} {% comment %} no prazo {% endcomment %}
-                        style="background-color: orange; font-weight: bold;"
-                      {% elif banca_falconi.nota_incompleta == 3 %} {% comment %} fora do prazo {% endcomment %}
-                        style="background-color: pink; font-weight: bold;"
-                      {% endif %}
-
-                      {% if banca_falconi.nota_texto %}
-                        data-toggle="tooltip" data-html="true" animation="true" title="{{ banca_falconi.avaliadores|safe }}">
-                        {{ banca_falconi.nota_texto|safe }}
-                      {% else %}
-                        >
-                          {% if banca_falconi.nota_incompleta > 0 %}
-                            <i class="fas fa-exclamation-triangle"></i>
-                          {% endif %}
-                      {% endif %}
-                    
-                    </a>
-                  </td>
-
               </tr>
 
             {% empty %}
-              <tr><td colspan="9">
+              <tr><td colspan="7">
                 {% lng "Não existem projetos disponíveis." "There are no projects available." %}
               </td></tr>
             {% endfor %}
@@ -326,59 +291,15 @@
         </span>
       </span>
       <br>
-
-      <span id="certificacoes" style="cursor:pointer;">
-        &nbsp;<b>{% lng "Certificações" "Certifications" %}:</b>
-      </span><br>
-      <span id="certificacao_excelencia_label" style="cursor:pointer;">
-        &nbsp;<span style="background-color:lightgreen">&nbsp;&nbsp;&nbsp;&nbsp;</span>
-        {% lng "Certificação Excelência FALCONI-INSPER" "FALCONI-INSPER Excellence Certification" %}
-        (<span id="certificacao_excelencia"></span>)
-      </span>
-      <br>
-
-      <span id="certificacao_destaque_label" style="cursor:pointer;">
-        &nbsp;<span style="background-color:lemonchiffon">&nbsp;&nbsp;&nbsp;&nbsp;</span>
-        {% lng "Certificação Destaque FALCONI-INSPER" "FALCONI-INSPER Highlight Certification" %}
-        (<span id="certificacao_destaque"></span>)
-      </span>
-      <br>
     
       <script>
         $("#total_projetos").html($(".item").length);
-        $("#certificacao_excelencia").html($(".certificacao_excelencia").length);
-        $("#certificacao_destaque").html($(".certificacao_destaque").length);
 
         document.getElementById("todos_projetos").addEventListener("click", function() {
           var items = document.querySelectorAll(".item");
           items.forEach(function(item) {item.style.display = "";});
           updateVisibleRowsCount();
         });
-
-        document.getElementById("certificacoes").addEventListener("click", function() {
-          var items = document.querySelectorAll(".item");
-          var certificacoes = document.querySelectorAll(".certificacao_excelencia , .certificacao_destaque");
-          items.forEach(function(item) {item.style.display = "none";});
-          certificacoes.forEach(function(item) {item.style.display = "";});
-          updateVisibleRowsCount();
-        });
-
-        document.getElementById("certificacao_excelencia_label").addEventListener("click", function() {
-          var items = document.querySelectorAll(".item");
-          var excelenciaItems = document.querySelectorAll(".certificacao_excelencia");
-          items.forEach(function(item) {item.style.display = "none";});
-          excelenciaItems.forEach(function(item) {item.style.display = "";});
-          updateVisibleRowsCount();
-        });
-
-        document.getElementById("certificacao_destaque_label").addEventListener("click", function() {
-          var items = document.querySelectorAll(".item");
-          var excelenciaItems = document.querySelectorAll(".certificacao_destaque");
-          items.forEach(function(item) {item.style.display = "none";});
-          excelenciaItems.forEach(function(item) {item.style.display = "";});
-          updateVisibleRowsCount();
-        });
-
 
       </script>
 
@@ -429,13 +350,7 @@
           <input type="range" min="0" max="10" step="0.5" value="0" class="slider" id="slider4" data-col="7" oninput="updateValue('slider4', 'value4')">
           <span id="value4">0</span>
         </div>
-
-        <div class="slider-wrapper text-center">
-          <label for="slider5">Banca Falconi</label>
-          <input type="range" min="0" max="10" step="0.5" value="0" class="slider" id="slider5" data-col="8" oninput="updateValue('slider5', 'value5')">
-          <span id="value5">0</span>
-        </div>
-          
+  
       </div>
     </div>
 
