--- a/templates/display_avaliacoes.html
+++ b/templates/display_avaliacoes.html
@@ -6,6 +6,7 @@
 
 {% load static %}
 {% load exibe_notas %}
+{% load linguas %}
 
 {% if avaliacoes %}
   {% if user.tipo_de_usuario != 1 or projeto|exibe_notas_proj:item.composicao.exame %} {% comment %} Filtra certas avaliações para estudantes não verem {% endcomment %}
@@ -20,22 +21,22 @@
                   <li style="margin-left: -0.6em; white-space: nowrap; list-style-type: '&#8227; ';">
                     {% if avaliacao.objetivo %}
                       {{avaliacao.objetivo.titulo}}:
-                      {% comment %} {{avaliacao.objetivo.sigla}}: {% endcomment %}
                     {% else %}
-                      Objetivo não definido 
+                      {% lng "Objetivo não definido" "Objective not defined" %}
                     {% endif %}
                     {{avaliacao.get_conceito}}
                   </li>
                 {% endfor %}
               </ul>
-              <b>Nota = {{nota|floatformat:2}}  </b>
+              <b>{% lng "Nota" "Grade" %} = {{nota|floatformat:2}}  </b>
             {% else %}
-              <b>Decisão:</b><br>
+              <b>
+                {% lng "Decisão" "Decision" %}:</b><br>
               &#8227;
               {% if avaliacoes.last.nota > 5 %}
-                Adequado
+                {% lng "Adequado" "Adequate" %}
               {% else %}
-                Inadequado
+                {% lng "Inadequado" "Inadequate" %}
               {% endif %}
             {% endif %}
             </div></td>
@@ -45,12 +46,12 @@
             {% if observacao.observacoes_estudantes or observacao.observacoes_orientador %}
               <td class="box_notas"><div class="box_divs">
               {% if observacao.observacoes_estudantes %}
-                  <b>Observações para Estudantes:</b><br>
+                  <b>{% lng "Observações para Estudantes" "Observations for Students" %}:</b><br>
                   {{observacao.observacoes_estudantes}}<br>
                   {% if observacao.observacoes_orientador %}<br>{% endif %}
               {% endif %}
               {% if observacao.observacoes_orientador %} 
-                  <b>Observações do Orientador:</b><br>
+                  <b>{% lng "Observações do Orientador" "Supervisor's Observations" %}:</b><br>
                   {{observacao.observacoes_orientador}}
               {% endif %}
               </div></td>
@@ -60,7 +61,7 @@
 
             {% if observacao.observacoes_estudantes %}
               <td class="box_notas"><div class="box_divs">
-                <b>Observações:</b><br>
+                <b>{% lng "Observações" "Observations" %}:</b><br>
                 {{observacao.observacoes_estudantes}}<br>
               </div></td>
             {% endif %}
