--- a/organizacoes/templates/organizacoes/proposta_submissao.html
+++ b/organizacoes/templates/organizacoes/proposta_submissao.html
@@ -9,6 +9,7 @@
   {% load static %}
   {% load linguas %}
   {% load define_action %}
+  {% load propostas %}
   <script src="{% static 'js/aviso_perda_edicao.js' %}"></script>
 
   <style>
@@ -41,6 +42,62 @@
       padding-right: 6px;
     } 
 
+    .tab_contatos {
+      width: 100%;
+      margin-bottom: 8px;
+    }
+
+    .tab_contatos td {
+      padding: 2px 0px;
+    }
+
+    .tab_contatos td input {
+      border-width: thin;
+    }
+
+    @media (max-width: 700px) {
+      .tab_contatos, .tab_contatos tbody, .tab_contatos tbody th, .tab_contatos tbody td, .tab_contatos tbody tr {
+        display: block;
+      }
+
+      .tab_contatos thead {
+        display: none;
+      }
+
+      .tab_contatos tr {
+        margin-bottom: 5px;
+        border: 1px solid #ccc;
+        padding: 5px;
+      }
+
+      .tab_contatos td {
+        text-align: left;
+        {% comment %} padding-left: 50%; {% endcomment %}
+        position: relative;
+      }
+
+      .tab_contatos td input {
+        margin-left: 60px;
+        width: calc(100% - 60px);
+      }
+
+      .tab_contatos td:before {
+        content: attr(data-label);
+        position: absolute;
+        left: 0px;
+        width: 60px;
+        white-space: nowrap;
+        text-align: left;
+        font-weight: 500;
+        font-size: 0.9em;
+      }
+
+    }
+
+    .campo_contatos {
+      font-weight: 500;
+      font-size: 0.9em;
+    }
   </style>
 {% endblock %}
 
@@ -65,13 +122,9 @@
         {% if user.eh_admin %}{% define False as liberadas_propostas %}{% endif %}
 
         {% if request.user.eh_prof %}
-          <strong>
-            {% lng "Seu Perfil é de Professor, você está preenchendo para alguma organização." "Your Profile is of Teacher, you are filling in for some organization." %}
-          </strong><br>
+          <b>{% lng "Seu Perfil é de Professor, você está preenchendo para alguma organização." "Your Profile is of Teacher, you are filling in for some organization." %}</b><br>
         {% elif request.user.eh_admin %}
-          <strong>
-            {% lng "Seu Perfil é de Administrador, você está preenchendo para alguma organização." "Your Profile is of Administrator, you are filling in for some organization." %}
-          </strong><br>
+          <b>{% lng "Seu Perfil é de Administrador, você está preenchendo para alguma organização." "Your Profile is of Administrator, you are filling in for some organization." %}</b><br>
         {% endif %}
         
       </div>
@@ -86,7 +139,7 @@
               pattern="^[\s]*\S+(?:[\s]+\S+){1,99}[\s]*$" oninvalid="this.setCustomValidity('Digite o nome completo')" 
               oninput="this.setCustomValidity('')" required {% if edicao and liberadas_propostas %}disabled{% endif %}><br>
             <label class="topico" for="email">e-mail:</label>
-            <input class="requiredField" autocomplete="on" type="text" size="75" maxlength="80" 
+            <input class="requiredField" autocomplete="on" type="email" size="75" maxlength="80" 
               id="email" name="email" value="{% if request.user.is_authenticated %}{{request.user.email}}{% endif %}" 
               pattern="^[\s]*([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5}){1,99}[\s]*([;,][\s]*([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5}){1,25})*[\s]*$" 
               oninvalid="this.setCustomValidity('Digite um ou mais endereços de e-mail (e-mails separados por ponto e vírgula)')" 
@@ -102,9 +155,10 @@
                 {% lng "sigla e nome comercial/fantasia (não é necessário indicar a Razão Social)" "acronym and commercial/fantasy name (it is not necessary to indicate the Corporate Name)" %}
               </small>
             </label><br>
-            <textarea class="requiredField" id="organizacao" name="organizacao" rows="1" cols="120" maxlength="120"  
-              {% if edicao and liberadas_propostas %}disabled{% endif %}
-              required>{% if proposta.nome_organizacao %}{{ proposta.nome_organizacao }}{% elif organizacao and organizacao.nome %}{{organizacao.nome}}{% endif %}</textarea>
+            <input class="requiredField" type="text" id="organizacao" name="organizacao" size="100" maxlength="120"  
+              value="{% if proposta.nome_organizacao %}{{ proposta.nome_organizacao }}{% elif organizacao and organizacao.nome %}{{organizacao.nome}}{% endif %}"
+              {% if edicao and liberadas_propostas %}disabled{% endif %} required>
+            <br>
 
             <label class="topico" for="website">website:</label>
             <input class="requiredField" type="text" size="75"  maxlength="250" id="website" name="website" 
@@ -128,17 +182,82 @@
                 {% lng "nome/e-mail/telefone para que estudantes e orientadores entrem em contato a cerca do desenvolvimento do projeto" "name/e-mail/phone for students and advisors to contact about the project development" %}
               </small>
             </label><br>
-            <textarea id="contatos_tecnicos" class="requiredField" name="contatos_tecnicos" rows="3" cols="120" maxlength="400" required 
-              {% if edicao and liberadas_propostas %}disabled{% endif %}>{% if proposta.contatos_tecnicos %}{{proposta.contatos_tecnicos}}{% endif %}</textarea>
-        
+
+            {% if proposta.contatos_tecnicos %} {% comment %} O campo contatos_tecnicos é um campo de texto livre que não é mais usado. {% endcomment %}
+              <textarea id="contatos_tecnicos" class="requiredField" name="contatos_tecnicos" rows="3" cols="120" maxlength="400" required 
+                {% if edicao and liberadas_propostas %}disabled{% endif %}>{% if proposta.contatos_tecnicos %}{{proposta.contatos_tecnicos}}{% endif %}</textarea>
+            {% endif %}
+            <table class="tab_contatos">
+              <thead>
+                <tr>
+                  <td><label class="campo_contatos" for="contato_tec_nome_0">{% lng "Nome" "Name" %}</label></td>
+                  <td><label class="campo_contatos" for="contato_tec_email_0">e-mail</label></td>
+                  <td><label class="campo_contatos" for="contato_tec_tel_0">{% lng "Telefone" "Phone" %}</label></td>
+                  <td><label class="campo_contatos" for="contato_tec_cargo_0">{% lng "Cargo" "Position" %}</label></td>
+                </tr>
+              </thead>
+              <tbody>
+                {% with tipo="T" %}
+                  {% for contato in proposta|contatos_tec3 %}
+                    <tr>
+                      <td data-label="Nome"><input {% if forloop.first %}class="requiredField" required{% endif %} type="text" maxlength="250" id="contato_{{tipo}}_nome_{{forloop.counter0}}" name="contato_{{tipo}}_nome_{{forloop.counter0}}" size="19"
+                        value="{% if contato.nome %}{{contato.nome}}{% endif %}"  
+                        {% if edicao and liberadas_propostas %}disabled{% endif %}></td>
+                      <td data-label="e-mail"><input {% if forloop.first %}class="requiredField" required{% endif %} type="email" maxlength="250" id="contato_{{tipo}}_email_{{forloop.counter0}}" name="contato_{{tipo}}_email_{{forloop.counter0}}" size="18" 
+                        value="{% if contato.email %}{{contato.email}}{% endif %}" 
+                        {% if edicao and liberadas_propostas %}disabled{% endif %}></td>
+                      <td data-label="Telefone"><input type="tel" maxlength="250" id="contato_{{tipo}}_tel_{{forloop.counter0}}" name="contato_{{tipo}}_tel_{{forloop.counter0}}" size="15" 
+                        value="{% if contato.telefone %}{{contato.telefone}}{% endif %}" 
+                        {% if edicao and liberadas_propostas %}disabled{% endif %}></td>
+                      <td data-label="Cargo"><input type="text" maxlength="250" id="contato_{{tipo}}_cargo_{{forloop.counter0}}" name="contato_{{tipo}}_cargo_{{forloop.counter0}}" size="16"
+                        value="{% if contato.cargo %}{{contato.cargo}}{% endif %}" 
+                        {% if edicao and liberadas_propostas %}disabled{% endif %}></td>
+                    </tr>
+                  {% endfor %}
+                {% endwith %}
+              </tbody>
+            </table>
+
             <label class="topico" for="contatos_adm">
               {% lng "Contatos Administrativos" "Administrative Contacts" %}<br>
               <small class="obs">
-                {% lng "nome/e-mail/telefone para quem devemos entrar em contato para resolver questões contratuais ou RH (opcional)" "name/e-mail/phone for who we should contact to resolve contractual or HR issues (optional)" %}
+                {% lng "nome/e-mail/telefone para quem devemos entrar em contato para resolver questões contratuais ou RH" "name/e-mail/phone for who we should contact to resolve contractual or HR issues" %}
               </small>
             </label><br>
-            <textarea id="contatos_adm" name="contatos_adm" rows="3" cols="120" maxlength="400" 
-              {% if edicao and liberadas_propostas %}disabled{% endif %}>{% if proposta.contatos_administrativos %}{{proposta.contatos_administrativos}}{% endif %}</textarea>
+            {% if proposta.contatos_administrativos %}
+              <textarea id="contatos_adm" name="contatos_adm" rows="3" cols="120" maxlength="400" 
+                {% if edicao and liberadas_propostas %}disabled{% endif %}>{% if proposta.contatos_administrativos %}{{proposta.contatos_administrativos}}{% endif %}</textarea>
+            {% endif %}
+            <table class="tab_contatos">
+              <thead>
+                <tr>
+                  <td><label class="campo_contatos" for="contato_tec_nome_0">{% lng "Nome" "Name" %}</label></td>
+                  <td><label class="campo_contatos" for="contato_tec_email_0">e-mail</label></td>
+                  <td><label class="campo_contatos" for="contato_tec_tel_0">{% lng "Telefone" "Phone" %}</label></td>
+                  <td><label class="campo_contatos" for="contato_tec_cargo_0">{% lng "Cargo" "Position" %}</label></td>
+                </tr>
+              </thead>
+              <tbody>
+                {% with tipo="A" %}
+                  {% for contato in proposta|contatos_adm3 %}
+                    <tr>
+                      <td data-label="Nome"><input {% if forloop.first %}class="requiredField" required{% endif %} type="text" maxlength="250" id="contato_{{tipo}}_nome_{{forloop.counter0}}" name="contato_{{tipo}}_nome_{{forloop.counter0}}" size="19"
+                        value="{% if contato.nome %}{{contato.nome}}{% endif %}"  
+                        {% if edicao and liberadas_propostas %}disabled{% endif %}></td>
+                      <td data-label="e-mail"><input {% if forloop.first %}class="requiredField" required{% endif %} type="email" maxlength="250" id="contato_{{tipo}}_email_{{forloop.counter0}}" name="contato_{{tipo}}_email_{{forloop.counter0}}" size="18" 
+                        value="{% if contato.email %}{{contato.email}}{% endif %}" 
+                        {% if edicao and liberadas_propostas %}disabled{% endif %}></td>
+                      <td data-label="Telefone"><input type="tel" maxlength="250" id="contato_{{tipo}}_tel_{{forloop.counter0}}" name="contato_{{tipo}}_tel_{{forloop.counter0}}" size="15" 
+                        value="{% if contato.telefone %}{{contato.telefone}}{% endif %}" 
+                        {% if edicao and liberadas_propostas %}disabled{% endif %}></td>
+                      <td data-label="Cargo"><input type="text" maxlength="250" id="contato_{{tipo}}_cargo_{{forloop.counter0}}" name="contato_{{tipo}}_cargo_{{forloop.counter0}}" size="16"
+                        value="{% if contato.cargo %}{{contato.cargo}}{% endif %}" 
+                        {% if edicao and liberadas_propostas %}disabled{% endif %}></td>
+                    </tr>
+                  {% endfor %}
+                {% endwith %}
+              </tbody>
+            </table>
 
             <label class="topico" for="descricao_organizacao">
               {% lng "Informações sobre a instituição/empresa" "Information about the institution/company" %}<br>
