--- a/propostas/templates/propostas/proposta_completa.html
+++ b/propostas/templates/propostas/proposta_completa.html
@@ -10,6 +10,7 @@
   {% load static %}
   {% load bleach %}
   {% load linguas %}
+  {% load propostas %}
 
   <script src="{% static 'js/pfe_pulsa_texto.js' %}"></script>
 
@@ -45,25 +46,41 @@
   {% endwith %}
 
   <strong>
-    {% lng "Submetido por:" "Submitted by:" %}
+    {% lng "Submetido por" "Submitted by" %}:
   </strong><br>
   {{proposta.nome}}<br><br>
 
-  {% if proposta.contatos_tecnicos %}
-    <strong>
-      {% lng "Contatos Técnicos" "Technical Contacts" %}
-    </strong><br>
-    {{proposta.contatos_tecnicos|linebreaks|bleach_urlize|safe}}
-    <br><br>
-  {% endif %}
+  {% with c_t=proposta|contatos_tec %}
+    {% if proposta.contatos_tecnicos or c_t %}
+      <strong>{% lng "Contatos Técnicos" "Technical Contacts" %}</strong><br>
+      {% if proposta.contatos_tecnicos %}
+        {{proposta.contatos_tecnicos|linebreaks|bleach_urlize|safe}}
+        <br>
+      {% endif %}
+      {% if c_t %}
+        {% for contato in c_t %}
+          {{contato}}<br>
+        {% endfor %}
+      {% endif %}
+      <br>
+    {% endif %}
+  {% endwith %}
 
-  {% if proposta.contatos_administrativos %}
-    <strong>
-      {% lng "Contatos Administrativos" "Administrative Contacts" %}
-    </strong><br>
-    {{proposta.contatos_administrativos|linebreaks|bleach_urlize|safe}}
-    <br><br>
-  {% endif %}
+  {% with c_a=proposta|contatos_adm %}
+    {% if proposta.contatos_administrativos or c_a %}
+      <strong>{% lng "Contatos Administrativos" "Administrative Contacts" %}</strong><br>
+      {% if proposta.contatos_administrativos %}
+        {{proposta.contatos_administrativos|linebreaks|bleach_urlize|safe}}
+        <br>
+      {% endif %}
+      {% if c_a %}
+        {% for contato in c_a %}
+          {{contato}}<br>
+        {% endfor %}
+      {% endif %}
+      <br>
+    {% endif %}
+  {% endwith %}
 
   <h5 style="margin-bottom: 4px;">
     {% lng "Áreas de Interesse" "Areas of Interest" %}
