explicação da ponderação de pares

--- a/estudantes/templates/estudantes/includes/tabela_pares.html
+++ b/estudantes/templates/estudantes/includes/tabela_pares.html
@@ -49,4 +49,9 @@
       </tr>
     {% endfor %}
   </tbody>
+  <caption style="padding-top: 2px;">
+    <div style="line-height: 1.2; font-size: 0.8em;">
+      <span lang="pt">Cada estudante pode avaliar o colega de 1 a 5 em cada quesito. As avaliações maiores que 3 são agrupadas na Favorabilidade e as menores que 3 na Desfavorabilidade, avaliações iguais a 3 são disprezadas.</span>
+      <span lang="en">Each student can evaluate their peer from 1 to 5 in each criterion. Ratings greater than 3 are grouped in Favorability and those less than 3 in Unfavorability, ratings equal to 3 are disregarded.</span>
+    </div>
 </table>
