filtro para parceiros por curso

--- a/documentos/templates/documentos/exportar_documentos_projetos.html
+++ b/documentos/templates/documentos/exportar_documentos_projetos.html
@@ -44,6 +44,6 @@
 
   </form>
 
-  {% include "edicoes_ajax.html" with tabela='Projetos' com_cursos=True %}
+  {% include "edicoes_ajax.html" with tabela="Projetos" com_cursos=True %}
   
 {% endblock %}
