--- a/organizacoes/templates/organizacoes/despesa_view.html
+++ b/organizacoes/templates/organizacoes/despesa_view.html
@@ -154,6 +154,34 @@
       {% endif %}
     </div>
 
+    <div class="form-group row">
+      <label style="line-height: normal;" for="anexo_0" class="col-sm-2 control-label">
+        {% lng "Anexo (documentos)" "Attachment (documents)" %}
+      </label>
+      
+      <div class="col-sm-10" style="height: 118px; overflow-y: auto;">
+
+        <div style="display: flex; align-items: center; border: 1px solid #ccc; padding: 3px 2px; margin-bottom: 5px;">
+          <div style="margin-right: 10px;">1</div>
+          <div style="flex-grow: 1;">
+            <select name="anexo_0" id="anexo_0" class="form-control" title="Selecione anexo">
+              <option value id="nenhum"> -------- </option>
+              {% for documento in documentos %}
+                <option value="{{documento.id}}">[{{documento.data|date:"d/m/y"}}] {{documento.filename}}</option>
+              {% endfor %}
+            </select>
+            <input required id="arquivo_0" type="file" name="arquivo_0" class="form-control" style="border: 0px; padding-left: 0px;"
+              {% include "formatos_suportados.html" %}>
+            <label for="link_0">link</label>
+            <input type="text" size="25" maxlength="{% max_length DocumentoModel "link" %}" id="link_0" name="link_0">
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+
   </div>
 
   <div class="modal-footer">    
