--- a/professores/templates/professores/relatos_quinzenais.html
+++ b/professores/templates/professores/relatos_quinzenais.html
@@ -43,7 +43,7 @@
 
     {% if edicao and administracao %}
       <br>
-      <b>{% lng "Estatíscas" "Statistics" %}</b>:<br>
+      <b>{% lng "Estatísticas" "Statistics" %}</b>:<br>
       <table class="tabela-padrao table-bordered table-sm ">
         <thead>
           <tr>
