--- a/professores/templates/professores/dinamicas_lista.html
+++ b/professores/templates/professores/dinamicas_lista.html
@@ -67,15 +67,15 @@
                   </ol>
                 </div>
 
-                <br>
-                <b>&#9733; {% lng "Formulário de feedback" "Feedback form" %}</b>:
-                <div style="overflow: auto;"><a href="{% url 'encontro_feedback' e.id %}">https://{{ request.get_host }}{% url 'encontro_feedback' e.id %}</a></div><br>
+                <div class="avaliacao" style="margin-top: 8px; overflow-wrap: break-word;">
+                  &#9733;
+                  <b>{% lng "Formulário de feedback" "Feedback form" %}</b>
+                  <a href="{% url 'encontro_feedback' e.id %}">https://{{ request.get_host }}{% url 'encontro_feedback' e.id %}</a>
+                </div>
 
               {% else %}
                 {% lng "Horário Livre" "Available Time" %}<br><br>
               {% endif %}
-
-
 
               <span class="editar esconder" style="float: right;">
                 <a class="open-modal" data-url="{% url 'dinamicas_editar' e.id %}" href="{% url 'dinamicas_editar' e.id %}"> 
