--- a/templates/cabecalho_projeto.html
+++ b/templates/cabecalho_projeto.html
@@ -8,7 +8,7 @@
 
 {% if projeto %}
 
-  {% if user.is_authenticated and user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+  {% if user.is_authenticated and user.eh_prof_a %}
 
     {% if projeto.organizacao %}
       <b>{% lng "Organização" "Organization" %}:</b>
@@ -37,20 +37,21 @@
     {% endif %}
 
     {% if projeto.orientador %}
-      {% if banca.projeto.proposta.intercambio %}
-        <b>{% lng_g projeto.orientador.user.genero "Professor Responsável" "Professora Responsável" "Responsible Professor" %}:</b>
-      {% else %}
-        <b>{% lng_g projeto.orientador.user.genero "Orientador" "Orientadora" "Advisor" %}:</b>
-      {% endif %}
-      <a class="imprimir" href="{% url 'professor_detail' projeto.orientador.id %}">{{ projeto.orientador.user.get_full_name }}</a>
-      {% if not sem_email %}
-        <span class="texto-longo"><a href="mailto:{{projeto.orientador.user.email}}">&lt;{{projeto.orientador.user.email}}&gt;</a></span>
-        <span class="texto-curto"><a href="mailto:{{projeto.orientador.user.email}}"><i class="far fa-envelope"></i></a></span>
-      {% endif %}
+      <div class="orientacao">
+        {% if banca.projeto.proposta.intercambio %}
+          <b>{% lng_g projeto.orientador.user.genero "Professor Responsável" "Professora Responsável" "Responsible Professor" %}:</b>
+        {% else %}
+          <b>{% lng_g projeto.orientador.user.genero "Orientador" "Orientadora" "Advisor" %}:</b>
+        {% endif %}
+        <a class="imprimir" href="{% url 'professor_detail' projeto.orientador.id %}">{{ projeto.orientador.user.get_full_name }}</a>
+        {% if not sem_email %}
+          <span class="texto-longo"><a href="mailto:{{projeto.orientador.user.email}}">&lt;{{projeto.orientador.user.email}}&gt;</a></span>
+          <span class="texto-curto"><a href="mailto:{{projeto.orientador.user.email}}"><i class="far fa-envelope"></i></a></span>
+        {% endif %}
+      </div>
     {% else %}
-      {% lng "Orientador: Não definido" "Advisor: Not defined" %}
+      <div class="orientacao">{% lng "Orientador: Não definido" "Advisor: Not defined" %}</div>
     {% endif %}
-    <br>
 
     {% with coorientadores=banca.get_projeto.coorientador_set.all %}
       {% if coorientadores %}
