--- a/templates/pares.html
+++ b/templates/pares.html
@@ -22,21 +22,23 @@
           </td>
           <td>
             {% if feita %}
-              {% if tipo_avaliacao == "intermediaria" and alocacao.avaliacao_intermediaria %}
-                <a href="{% url 'ver_pares_projeto' alocacao.projeto.id tipo_avaliacao %}" style="color:green">
-                  {% lng "Avaliação de Pares Verificada" "Peer Evaluation Verified" %}
-                </a>
-              {% elif tipo_avaliacao == "final" and alocacao.avaliacao_final %}
-                <a href="{% url 'ver_pares_projeto' alocacao.projeto.id tipo_avaliacao %}" style="color:green">
-                  {% lng "Avaliação de Pares Verificada" "Peer Evaluation Verified" %}
-                </a>
-              {% else %}
-                <a href="{% url 'ver_pares_projeto' alocacao.projeto.id tipo_avaliacao %}" style="color:brown">
-                  {% lng "Aguardando Confirmação de Orientador" "Waiting for Advisor Confirmation" %}
-                </a>
-              {% endif %}
+              <span class="aval_entreg_{% if tipo_avaliacao == 'final' %}f{% else %}i{% endif %}">
+                {% if tipo_avaliacao == "intermediaria" and alocacao.avaliacao_intermediaria %}
+                  <a href="{% url 'ver_pares_projeto' alocacao.projeto.id tipo_avaliacao %}" style="color:green">
+                    {% lng "Avaliação de Pares Verificada" "Peer Evaluation Verified" %}
+                  </a>
+                {% elif tipo_avaliacao == "final" and alocacao.avaliacao_final %}
+                  <a href="{% url 'ver_pares_projeto' alocacao.projeto.id tipo_avaliacao %}" style="color:green">
+                    {% lng "Avaliação de Pares Verificada" "Peer Evaluation Verified" %}
+                  </a>
+                {% else %}
+                  <a href="{% url 'ver_pares_projeto' alocacao.projeto.id tipo_avaliacao %}" style="color:brown">
+                    {% lng "Aguardando Confirmação de Orientador" "Waiting for Advisor Confirmation" %}
+                  </a>
+                {% endif %}
+              </span>
             {% else %}
-              <span style="color:#DDB300">
+              <span style="color:#DDB300" class="aval_nentreg_{% if tipo_avaliacao == 'final' %}f{% else %}i{% endif %}">
                 {% lng "Aguardando Estudante Preencher" "Waiting for Student to Fill" %}
               </span>
             {% endif %}
