--- a/professores/templates/professores/relatos_quinzenais.html
+++ b/professores/templates/professores/relatos_quinzenais.html
@@ -41,7 +41,9 @@
       {% endfor %}
     {% endif %}
 
+
     {% if edicao and administracao %}
+      {% comment %} Tabela com informações consolidadas da entregas de relatos quinzenais {% endcomment %}
       <br>
       <b>{% lng "Estatísticas" "Statistics" %}</b>:<br>
       <table class="tabela-padrao table-bordered table-sm ">
@@ -55,6 +57,8 @@
             <th>&#10060;</th>
             {% comment %} <th>{% lng "Avaliar" "Evaluating" %}</th>
             <th>{% lng "Avaliado" "Evaluated" %}</th> {% endcomment %}
+          </tr>
+        </thead>
         <tbody>
         {% for evento in edicao|get_relatos_edicao %}
           <tr style="padding-left: 18px;">
@@ -73,10 +77,10 @@
                   {% endlanguage %}
                 </span>
               </td>
-              <td id="bom_{{evento.id}}"></td>
-              <td id="ruim_{{evento.id}}"></td>
-              <td id="entr_{{evento.id}}"></td>
-              <td id="nao_{{evento.id}}"></td>
+              <td id="bom_{{evento.id}}" style="text-align: right;"></td>
+              <td id="ruim_{{evento.id}}" style="text-align: right;"></td>
+              <td id="entr_{{evento.id}}" style="text-align: right;"></td>
+              <td id="nao_{{evento.id}}" style="text-align: right;"></td>
               {% comment %} <td id="avaliar_{{evento.id}}"></td>
               <td id="avaliado_{{evento.id}}"></td> {% endcomment %}
           </tr>
@@ -90,17 +94,17 @@
             count_x1F44E = 0;
             count_9989 = 0;
             count_10060 = 0;
-            eventos = document.querySelectorAll('.eventor_{{evento.id}}');
+            eventos = document.querySelectorAll(".eventor_{{evento.id}}");
             eventos.forEach(element => {
               if (element.innerHTML.includes('👍')) count_x1F44D++; // &#x1F44D;
               if (element.innerHTML.includes('👎')) count_x1F44E++; // &#x1F44E;
               if (element.innerHTML.includes('✅')) count_9989++; // &#9989;
               if (element.innerHTML.includes('❌')) count_10060++; // &#10060;
             });
-            document.getElementById('bom_{{evento.id}}').innerText = count_x1F44D;
-            document.getElementById('ruim_{{evento.id}}').innerText = count_x1F44E;
-            document.getElementById('entr_{{evento.id}}').innerText = count_9989;
-            document.getElementById('nao_{{evento.id}}').innerText = count_10060;
+            document.getElementById("bom_{{evento.id}}").innerText = count_x1F44D;
+            document.getElementById("ruim_{{evento.id}}").innerText = count_x1F44E;
+            document.getElementById("entr_{{evento.id}}").innerText = count_9989;
+            document.getElementById("nao_{{evento.id}}").innerText = count_10060;
           {% endfor %}
         }
       </script>
