bloqueando a visualização das dinamicas de grupo para estudantes antes do período

--- a/administracao/templates/administracao/montar_grupos.html
+++ b/administracao/templates/administracao/montar_grupos.html
@@ -419,7 +419,7 @@
         <b>Você já participou de atividades sociais? Por exemplo trabalhos voluntários ou ações em comunidades.</b><br>
         {{estudante.social|linebreaks}}<br>{% endif %}
         {% if estudante.entidade %}
-        <b>Você já participou de alguma entidade estudantil do Insper?</b><br>
+        <b>Você já participou de alguma entidade estudantil/IC/IT/Ninja/etc no Insper?</b><br>
         {{estudante.entidade|linebreaks}}<br>{% endif %}
         {% if estudante.familia %}
         <b>Você possui familiares em alguma empresa que está aplicando? Ou empresa concorrente direta?</b><br>
