--- a/professores/templates/professores/relatos_quinzenais.html
+++ b/professores/templates/professores/relatos_quinzenais.html
@@ -101,10 +101,11 @@
               if (element.innerHTML.includes('✅')) count_9989++; // &#9989;
               if (element.innerHTML.includes('❌')) count_10060++; // &#10060;
             });
-            document.getElementById("bom_{{evento.id}}").innerText = count_x1F44D;
-            document.getElementById("ruim_{{evento.id}}").innerText = count_x1F44E;
-            document.getElementById("entr_{{evento.id}}").innerText = count_9989;
-            document.getElementById("nao_{{evento.id}}").innerText = count_10060;
+            total = count_x1F44D + count_x1F44E + count_9989 + count_10060;
+            document.getElementById("bom_{{evento.id}}").innerText = count_x1F44D + " (" + (100*count_x1F44D/total).toFixed(1) + "%)";
+            document.getElementById("ruim_{{evento.id}}").innerText = count_x1F44E + " (" + (100*count_x1F44E/total).toFixed(1) + "%)";
+            document.getElementById("entr_{{evento.id}}").innerText = count_9989 + " (" + (100*count_9989/total).toFixed(1) + "%)";
+            document.getElementById("nao_{{evento.id}}").innerText = count_10060 + " (" + (100*count_10060/total).toFixed(1) + "%)";
           {% endfor %}
         }
       </script>
