--- a/projetos/templates/projetos/lista_feedback_estudantes.html
+++ b/projetos/templates/projetos/lista_feedback_estudantes.html
@@ -177,7 +177,7 @@
           "Não"
         ]
       },
-      options: {title: {display: true, text: "Primeira Opção"} }
+      options: {title: {display: true, text: "Organização seria Primeira Opção para Trabalho"} }
     });
 
     var config_proposta = Object.assign({}, pie_base, {
