informando de limite de membros de banca

--- a/professores/templates/professores/bancas_view.html
+++ b/professores/templates/professores/bancas_view.html
@@ -431,6 +431,11 @@
           </select>
         </td>
       </tr>
+      <caption style="line-height: 1; padding: 4px 0px;">
+        <small>
+          {% lng "Indique duas pessoas para a banca. Para três pessoas peça autorização previamente." "Select two people for the examination board. For three people, ask for prior authorization." %}
+        </small>
+      </caption>
     </table>
 
     {% if banca %}
