--- a/professores/templates/professores/relato_avaliar.html
+++ b/professores/templates/professores/relato_avaliar.html
@@ -183,8 +183,10 @@
       <label for="observacoes">
         {% lng "Informe suas observações para a coordenação do Capstone (opcional)" "Inform your observations to the Capstone coordination (optional)" %}:
       </label><br>
-      <textarea id="observacoes" name="observacoes" rows="18" cols="164" maxlength="{% max_length Observacao 'observacoes_orientador' %}" {% if not editor %}disabled{% endif %}
-                placeholder="Caso identifique alguma dificuldade com qualquer estudante ou o grupo, descreva aqui que a coordenação do Capstone irá lhe auxiliar.">{% if observacoes %}{{observacoes}}{% endif %}</textarea>
+      <textarea id="observacoes" name="observacoes" rows="18" cols="164" maxlength="{% max_length Observacao 'observacoes_orientador' %}" {% if not editor %}disabled{% endif %} class="troca_lingua"
+        data-pt="Caso identifique alguma dificuldade com qualquer estudante ou o grupo, descreva aqui que a coordenação do Capstone irá lhe auxiliar." data-en="If you identify any difficulty with any student or the group, describe here that the Capstone coordination will assist you."
+        placeholder=""
+      >{% if observacoes %}{{observacoes}}{% endif %}</textarea>
     </div>
     
     <p>&nbsp;</p>
