--- a/projetos/templates/projetos/includes/bloco_titulo_resumo_pchave.html
+++ b/projetos/templates/projetos/includes/bloco_titulo_resumo_pchave.html
@@ -17,7 +17,10 @@
       {% lng "Título Final do Projeto" "Final Title of the Project" %}
     </b></label><br>
     <textarea id="titulo_final" name="titulo_final" rows="1" maxlength="{% max_length Projeto 'titulo_final' %}"
+    data-pt="Indique o título final do projeto usado no relatório (se diferente do título original da proposta)"
+    data-en="Indicate the final title of the project used in the report (if different from the original title of the proposal)"
     placeholder="Indique o título final do projeto usado no relatório (se diferente do título original da proposta)"
+    class="troca_lingua"
     {% if estudante_view and not request.user.eh_estud %}disabled{% endif %}
     >{% if projeto.titulo_final %}{{projeto.titulo_final}}{% endif %}</textarea>
     <br><br>
@@ -26,7 +29,10 @@
       {% lng "Resumo (português)" "Resumo (portuguese)" %}
     </b></label><br>
     <textarea id="resumo" name="resumo" rows="6" maxlength="{% max_length Projeto 'resumo' %}"
+    data-pt="Informe o resumo em português do projeto do relatório. Copie diretamente do seu relatório."
+    data-en="Inform the summary in Portuguese of the project of the report. Copy directly from your report."
     placeholder="Informe o resumo em português do projeto do relatório. Copie diretamente do seu relatório."
+    class="troca_lingua"
     {% if estudante_view and not request.user.eh_estud %}disabled{% endif %}
     >{% if projeto.resumo %}{{projeto.resumo}}{% endif %}</textarea>
     <br><br>
@@ -35,7 +41,10 @@
       {% lng "Abstract (inglês)" "Abstract (english)" %}
     </b></label><br>
     <textarea id="abstract" name="abstract" rows="6" maxlength="{% max_length Projeto 'abstract' %}"
+    data-pt="Informe o resumo em inglês do projeto do relatório. Copie diretamente do seu relatório."
+    data-en="Inform the summary in English of the project of the report. Copy directly from your report."
     placeholder="Informe o resumo em inglês do projeto do relatório. Copie diretamente do seu relatório."
+    class="troca_lingua"
     {% if estudante_view and not request.user.eh_estud %}disabled{% endif %}
     >{% if projeto.abstract %}{{projeto.abstract}}{% endif %}</textarea>
     <br><br>
@@ -45,7 +54,10 @@
     </b></label><br>
     <textarea id="palavras_chave" name="palavras_chave" rows="1" maxlength="{% max_length Projeto 'palavras_chave' %}"
     {% if estudante_view and not request.user.eh_estud %}disabled{% endif %}
+    data-pt="Informe as palavras-chave do projeto do relatório. Copie diretamente do seu relatório."
+    data-en="Inform the keywords of the project of the report. Copy directly from your report."
     placeholder="Informe as palavras-chave do projeto do relatório. Copie diretamente do seu relatório."
+    class="troca_lingua"
     >{% if projeto.palavras_chave %}{{projeto.palavras_chave}}{% endif %}</textarea>
     <br>
     <small>
