--- a/projetos/templates/projetos/reembolso_pedir.html
+++ b/projetos/templates/projetos/reembolso_pedir.html
@@ -39,8 +39,9 @@
     Projeto: {{projeto.get_titulo}}<br>
     <br>
     Descrição da compra:<br>
-    <textarea name="descricao" id="descricao" class="text" cols="60" rows ="4" form="reembolsoform"
-    placeholder="Descreva o que esta sendo pedido de reembolso" required></textarea>
+    <textarea name="descricao" id="descricao" class="text" cols="60" rows ="4" form="reembolsoform" class="troca_lingua"
+    placeholder="" data-pt="Descreva o que esta sendo pedido de reembolso" data-en="Describe what is being requested for reimbursement" 
+    required></textarea>
 
     <br><br>
     CPF
